Source/slurm-4503255.out
+ allCommand=
+ '[' 2 -gt 0 ']'
+ allCommand='  python3 '
+ shift
+ '[' 1 -gt 0 ']'
+ allCommand='   python3  comparison_gridworld.py '
+ shift
+ '[' 0 -gt 0 ']'
+ python3 comparison_gridworld.py
Traceback (most recent call last):
  File "comparison_gridworld.py", line 14, in <module>
    from nqcost import nqcost
  File "/home/s20aarsheemishr/696-ds/Source/nqcost.py", line 67
    ans = evaluate_interventions(env, human_policy, agent, is_update=True, return_dict)
                                                                          ^
SyntaxError: positional argument follows keyword argument
